fix a bug in sidenav not showing

--- a/docfx_project/ignite-ui-template/styles/css/main.css
+++ b/docfx_project/ignite-ui-template/styles/css/main.css
@@ -116,35 +116,9 @@ sup {
 sub {
   bottom: -0.25em; }
 
-body .toc {
+.toc {
   background-color: #fff;
   overflow-x: hidden; }
-
-.sidenav-container {
-  display: block;
-  position: relative; }
-  @media only screen and (min-width: 992px) {
-    .sidenav-container {
-      display: table-cell;
-      position: relative; } }
-
-.toc-toggle {
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  padding: 16px 0;
-  font-size: 16px;
-  font-weight: 500;
-  text-transform: uppercase;
-  color: #585858; }
-
-.sidetoc {
-  position: relative;
-  margin-left: -15px;
-  overflow-x: hidden;
-  overflow-y: auto;
-  background-color: #fff;
-  z-index: 1; }
 
 .sidetoc.shiftup {
   bottom: 70px; }
@@ -380,6 +354,45 @@ body .toc {
     -webkit-box-shadow: inset -24px 0 30px -16px rgba(0, 0, 0, 0.14);
             box-shadow: inset -24px 0 30px -16px rgba(0, 0, 0, 0.14);
     pointer-events: none; } }
+
+.sidenav-container {
+  display: block;
+  position: relative; }
+  @media only screen and (min-width: 992px) {
+    .sidenav-container {
+      display: table-cell;
+      position: relative; } }
+
+.toc-toggle {
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 16px 0;
+  font-size: 16px;
+  font-weight: 500;
+  text-transform: uppercase;
+  color: #585858; }
+
+.sidetoc {
+  position: relative;
+  margin-left: -15px;
+  overflow-x: hidden;
+  overflow-y: auto;
+  background-color: #fff;
+  z-index: 1; }
+
+@media only screen and (max-width: 991px) {
+  .toc-toggle {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex; }
+  .sidetoc {
+    margin: 0; }
+  .sidenav {
+    padding: 0;
+    margin: 24px 0 !important;
+    -webkit-box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.14);
+            box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.14); } }
 
 .article {
   margin-top: 120px;
