--- a/docfx_project/ignite-ui-template/styles/sass/partials/_toc.scss
+++ b/docfx_project/ignite-ui-template/styles/sass/partials/_toc.scss
@@ -1,33 +1,6 @@
-body .toc {
+.toc {
     background-color: #fff;
     overflow-x: hidden;
-}
-
-.sidenav-container {
-    display: block;
-    position: relative;
-    @media only screen and (min-width: 992px) {
-        display: table-cell;
-        position: relative;
-    }
-}
-
-.toc-toggle {
-    justify-content: center;
-    padding: 16px 0;
-    font-size: 16px;
-    font-weight: 500;
-    text-transform: uppercase;
-    color: #585858;
-}
-
-.sidetoc {
-    position: relative;
-    margin-left: -15px;
-    overflow-x: hidden;
-    overflow-y: auto;
-    background-color: #fff;
-    z-index: 1;
 }
 
 .sidetoc.shiftup {
@@ -316,5 +289,48 @@ body .toc {
             box-shadow: inset -24px 0 30px -16px rgba(0, 0, 0, 0.14);
             pointer-events: none;
         }
+    }
+}
+
+.sidenav-container {
+    display: block;
+    position: relative;
+    @media only screen and (min-width: 992px) {
+        display: table-cell;
+        position: relative;
+    }
+}
+
+.toc-toggle {
+    justify-content: center;
+    padding: 16px 0;
+    font-size: 16px;
+    font-weight: 500;
+    text-transform: uppercase;
+    color: #585858;
+}
+
+.sidetoc {
+    position: relative;
+    margin-left: -15px;
+    overflow-x: hidden;
+    overflow-y: auto;
+    background-color: #fff;
+    z-index: 1;
+}
+
+@media only screen and (max-width: 991px) {
+    .toc-toggle {
+        display: flex;
+    }
+
+    .sidetoc {
+        margin: 0;
+    }
+
+    .sidenav {
+        padding: 0;
+        margin: 24px 0 !important;
+        box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.14);
     }
 }
